<resources>
    <string name="app_name">Listado</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="correo">Correo</string>
    <string name="contrasenia">Contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_con_cuenta_google">Iniciar con cuenta google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n_con_contrase_a">Iniciar sesión con correo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre">Nombre</string>
    <string name="tus_listas_ahora">Tus listas ahora:</string>
    <string name="sin_lista_est_s_libre">Sin lista, estás libre</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="inscribir_a_lista">Inscribir a lista</string>
    <string name="mis_listas">Mis listas</string>
    <string name="virtual">Virtual</string>
    <string name="finalizado">Finalizado</string>
    <string name="todas_mis_listas">Todas mis listas</string>
</resources>