<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/primaryColor">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:paddingTop="60dp"
        android:paddingBottom="40dp"
        android:textColor="@color/primaryTextColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion"
        android:textSize="20sp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:textColor="@color/primaryTextColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="@color/primaryTextColor"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/primaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textColor="@color/primaryTextColor"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/primaryTextColor"/>

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondaryColor"
        android:textColor="@color/primaryTextColor"
        android:text="@string/inicia_sesion"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sin_cuenta"
        android:textColor="@color/primaryTextColor"
        android:background="@color/primaryLightColor"/>

    <Button
        android:id="@+id/with_google_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/iniciar_con_cuenta_google"
        android:textColor="@color/primaryTextColor"
        android:background="@color/primaryLightColor"/>

</LinearLayout>
