<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryTextColor"
    android:gravity="bottom"
    android:padding="48dp"
    android:layout_alignParentBottom="true"
    tools:context=".ui.RegisterEmail">

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/primaryColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:text="Crear cuenta con correo"
        android:textColor="@color/primaryColor"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:backgroundTint="@color/secondaryTextColor"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Apellido(s)"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:backgroundTint="@color/secondaryTextColor"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textColor="@color/secondaryTextColor"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/secondaryTextColor"
        android:textColor="@color/secondaryTextColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrasenia"
        android:textColor="@color/secondaryTextColor"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/secondaryTextColor"
        android:inputType="textPassword"
        android:textColor="@color/secondaryTextColor"/>

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:background="@drawable/round_style_white"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/primaryTextColor"
        android:text="@string/crear_cuenta"/>


</LinearLayout>