<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    android:scrollbars="none"

    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/greetings"
            android:fontFamily="@font/montserrat_bold"
            android:text="Bienvenido"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"
            android:layout_marginTop="64dp"
            android:layout_marginHorizontal="48dp"
            />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID: #######"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/primaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tus_listas_ahora"
                android:textSize="24dp"
                android:textColor="@color/secondaryTextColor"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_outline"
                android:tint="@color/primaryColor"
                />
        </LinearLayout>


        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:paddingStart="40dp"
            >

            
            <GridLayout
                android:layout_width="wrap_content"
                android:rowCount="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/round_style_white"
                    android:id="@+id/single_list"
                    android:layout_margin="8dp"
                    android:elevation="4dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:src="@drawable/ic_happy_outline"
                        android:tint="@color/primaryColor"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sin_lista_est_s_libre"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp"
                        android:layout_margin="8dp"
                        />
                </LinearLayout>



            </GridLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="8dp"
            android:paddingHorizontal="40dp">

            <Button
                android:id="@+id/log_in_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/inscribir_a_lista"
                android:drawableStart="@drawable/ic_create_outline"
                android:gravity="fill"
                android:textColor="@color/secondaryTextColor"
                android:drawablePadding="32dp"
                android:background="@drawable/round_style_white"
                android:drawableTint="@color/primaryColor"
                />

            <Button
                android:id="@+id/all_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/mis_listas"
                android:textColor="@color/secondaryTextColor"
                android:gravity="fill"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_list_outline"
                android:background="@drawable/round_style_white"
                android:drawableTint="@color/primaryColor"
                />

            <Button
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/secondaryColor"
                android:gravity="fill"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_log_out_outline"
                android:background="@drawable/round_style_white"
                android:drawableTint="@color/secondaryColor"
                />

        </LinearLayout>
    </LinearLayout>


</ScrollView>